Fixed some minor styling issues
- Set div container to equal calculated map width so it properly displays in situations where the map cannot be properly loaded.

- Added custom scrollbar styling for both Chrome and Firefox.

--- a/src/util/App.css
+++ b/src/util/App.css
@@ -7,6 +7,8 @@ html {
 	font-size: 16px;
 	font-family: "Karla", sans-serif;
 	overflow-x: hidden;
+	scrollbar-color: #000000 #0f0f0f;
+	scrollbar-width: thin;
 }
 
 #root {
@@ -19,6 +21,23 @@ html {
 
 ::-moz-selection {
 	background: #ccad00;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: #0f0f0f;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #000000;
+	border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #e4c200;
 }
 
 h1 {
@@ -354,7 +373,7 @@ a:active {
 
 .cover {
 	width: 100%;
-	height: 100%;
+	height: 120px;
 	position: absolute;
 	top: 0px;
 	left: 0px;
